# boostserializationhelper

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  compile_commands.json
common/: CMakeLists.txt  serializable.h
projects/: CMakeLists.txt
projects/basic/: CMakeLists.txt  basic_class.hpp
projects/complex/: CMakeLists.txt  complex_class.hpp
projects/non_intrusive/: CMakeLists.txt  non_intrusive.hpp
projects/split/: CMakeLists.txt  split_ampersand.hpp  split_class.hpp  split_directional.hpp
src/: CMakeLists.txt  main.cpp
src_lib/: CMakeLists.txt  SerializableClassInfoAggregator.cpp  SerializableClassInfoAggregator.h  SerializableClassInfoMediator.cpp  SerializableClassInfoMediator.h  SerializationContext.cpp  SerializationContext.h  matcher.h  serializable_class.cpp  serializable_class.h  serializable_class_storage.cpp  serializable_class_storage.h  serializable_field.h  visitor.h  warnings.h
src_lib/Diagnostics/: Diagnositcs.cpp  DiagnosticMessage.h  Diagnostics.h  IDiagnosticReporter.h  TestDiagnosticReporter.cpp  TestDiagnosticReporter.h
src_lib/Internals/: Internals.cpp  Internals.h  SerializationContext.cpp  SerializationContext.h
src_lib/Mediation/: SerializableClassInfoMediator.cpp  SerializableClassInfoMediator.h
src_lib/PostProcessing/: SerializableClassInfo.cpp  SerializableClassInfo.h  SerializableFieldInfo.cpp  SerializableFieldInfo.h  SerializationErrors.h  SerializeFunctionInfo.cpp  SerializeFunctionInfo.h  SerializeOperationInfo.cpp  SerializeOperationInfo.h
src_lib/SerializationInfo/: InfoFactory.h  SerializableClassInfo.cpp  SerializableClassInfo.h  SerializableFieldInfo.cpp  SerializableFieldInfo.h  SerializationErrors.cpp  SerializationErrors.h  SerializationObject.cpp  SerializationObject.h  SerializeFunctionInfo.cpp  SerializeFunctionInfo.h  SerializeOperationInfo.cpp  SerializeOperationInfo.h
src_lib/Types/: InfoTypes.h
src_lib/Utils/: Utils.cpp  Utils.h
src_test/: CMakeLists.txt  main.cpp
test_main/: CMakeLists.txt  basic.h  main.cpp
test_projects/: CMakeLists.txt  main.cpp  test_all.cpp  test_basic_project.cpp  test_complex_project.cpp  test_non_intrusive.cpp  test_split.cpp  test_split_ampersand.cpp  test_split_directional.cpp  testutil.cpp
test_projects/projects/: CMakeLists.txt
test_projects/projects/basic/: CMakeLists.txt  basic_class.h  test_project.cpp
test_projects/projects/complex/: CMakeLists.txt  complex_class.h  test_project.cpp
test_projects/utils/: CMakeLists.txt  test_utils.cpp  test_utils.h
